--- a/yiuhei/package.json
+++ b/yiuhei/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "firebase": "^7.6.1",
     "react-awesome-slider": "^2.4.0",
     "react-router-dom": "^5.1.2"
   }
